lib/laser/annotation_parser/useful_parsers.treetop
module Laser
  module Parsers
    grammar GeneralPurpose    
      rule space
        [ \t]
      end
      
      rule annotation_name
        [A-Za-z0-9_]+
      end
      
      rule method_name
        [A-Za-z0-9_]+ [=!?]? / operator
      end
      
      rule operator
        '[]=' / '[]' / '|' / '^' / '&' / '<=>' / '===' / '==' / '=~' / '>>' /
        '>=' / '>'/ '<<' / '<=' / '<' / '+@' / '-@' / '+' / '-' / '**' / '*' /
         '/' / '!' / '~' / '%'
      end
      
      rule parenthesized_type_list
        '(' space* ')' {
          def all_types
            []
          end
        } / '(' type_list ')' {
          def all_types
            type_list.all_types
          end
        }
      end
      
      rule type_list
        type space* ',' space* type_list {
          def all_types
            [type.type] + type_list.all_types
          end
        } / type {
          def all_types
            [type]
          end
        }
      end
    end
  end
end
